fix: elevator screen no-closures cosmetic issues
* The flexbox container for the no-closures component used the `gap`
  property, which is not supported by the old browser version on
  elevator screens. Replace this with a `margin`-based solution.

* Fix the "true" no-closures state (no closures at all, including
  nearby-redundancy elevators) having an unwanted space between the
  text "All MBTA elevators are working" and the period.

* Fix the alerts URL and phone number not necessarily having a line of
  text to themselves as in the designs, resulting in some oddly-placed
  line breaks (e.g. in the middle of the phone number).

Unrelated to the no-closures state:

* Fix that the upcoming closure component had every word of its trailer
  capitalized ("Until Further Notice" rather than the intended "Until
  further notice").

* Remove some duplication when invoking the "normal service" SVG icon.

--- a/assets/css/v2/elevator/closures.scss
+++ b/assets/css/v2/elevator/closures.scss
@@ -41,9 +41,16 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 80px;
     padding: 148px 72px;
     color: colors.$cool-black-15;
+
+    & > * {
+      margin-bottom: 80px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
 
     &__header {
       font-size: 90px;
@@ -52,7 +59,7 @@
     }
 
     &__text {
-      margin-bottom: 30px;
+      padding-bottom: 30px;
       font-size: 70px;
       font-weight: 400;
       line-height: 92px;
@@ -90,7 +97,10 @@
 
       &__postfix {
         font-weight: 700;
-        text-transform: capitalize;
+
+        &::first-letter {
+          text-transform: capitalize;
+        }
       }
     }
 
